@@ -1,4 +1,4 @@
-This software is Copyright (c) 2013 by Torsten Schoenfeld.
+This software is Copyright (c) 2014 by Torsten Schoenfeld.
 
 This is free software, licensed under:
 
