@@ -4,7 +4,7 @@
       "Torsten Schoenfeld <kaffeetisch@gmx.de>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 5.013, CPAN::Meta::Converter version 2.133380",
+   "generated_by" : "Dist::Zilla version 5.012, CPAN::Meta::Converter version 2.133380",
    "license" : [
       "lgpl_2_1"
    ],
@@ -43,6 +43,6 @@
       },
       "x_twitter" : "https://twitter.com/GTKPerl"
    },
-   "version" : "0.016"
+   "version" : "0.017"
 }
 
