@@ -3,24 +3,24 @@ abstract: 'Perl interface to the 3.x series of the gtk+ toolkit'
 author:
   - 'Torsten Schoenfeld <kaffeetisch@gmx.de>'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.013, CPAN::Meta::Converter version 2.133380'
+generated_by: 'Dist::Zilla version 5.012, CPAN::Meta::Converter version 2.133380'
 license:
   - lgpl_2_1
 meta-spec:
   url: http://search.cpan.org/perldoc?CPAN::Meta::Spec
-  version: '2'
+  version: 2
 name: Gtk3
 prereqs:
   configure:
     requires:
-      ExtUtils::MakeMaker: '6.30'
+      ExtUtils::MakeMaker: 6.30
   runtime:
     requires:
-      Cairo::GObject: '1.000'
-      Carp: '0'
-      Exporter: '0'
-      Glib::Object::Introspection: '0.016'
-      Test::Simple: '0.96'
+      Cairo::GObject: 1.000
+      Carp: 0
+      Exporter: 0
+      Glib::Object::Introspection: 0.016
+      Test::Simple: 0.96
 release_status: stable
 resources:
   bugtracker:
@@ -32,4 +32,4 @@ resources:
     url: git://git.gnome.org/perl-Gtk3
     web: http://git.gnome.org/browse/perl-Gtk3
   x_twitter: https://twitter.com/GTKPerl
-version: '0.016'
+version: 0.017
