@@ -1,5 +1,5 @@
 
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.013.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.012.
 use strict;
 use warnings;
 
@@ -28,7 +28,7 @@ my %WriteMakefileArgs = (
     "Test::Simple" => "0.96"
   },
   "TEST_REQUIRES" => {},
-  "VERSION" => "0.016",
+  "VERSION" => "0.017",
   "test" => {
     "TESTS" => "t/*.t"
   }
