@@ -1,9 +1,9 @@
 name    = Gtk3
-version = 0.016
+version = 0.017
 author  = Torsten Schoenfeld <kaffeetisch@gmx.de>
 license = LGPL_2_1
 copyright_holder = Torsten Schoenfeld
-copyright_year = 2013
+copyright_year = 2014
 ; 'is_trial' comes from Zilla.pm; use this flag to change between 'stable' and
 ; 'testing'. DZil 4.300034 supports only 'stable' and 'testing', not
 ; 'unstable'; there's a note in Zilla.pm about this fact
@@ -50,7 +50,7 @@ signed = 1
 [Git::Push]
 [TestRelease]
 [ConfirmRelease]
-[UploadToCPAN]
 [UploadToSFTP]
 site = frs.sourceforge.net
 directory = /home/pfs/project/g/gt/gtk2-perl/Gtk3
+[UploadToCPAN]
